feat: add api schema with gin

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -4,7 +4,7 @@ sql:
     queries: "./db/query/"
     schema: "./db/migration/"
     database:
-      uri: "postgres://root:secret@localhost:5432/simple_bank?sslmode=disable"
+      uri: "postgresql://postgres:123456789@127.0.0.1/simple_bank?sslmode=disable"
     gen:
       go:
         package: "db"
